--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@
                         
                         <p>Main tasks:<br>
                         </p><ul>
-                            <li>Introduce new and experienced programmers to HackerEarth Platform.</li>
-                            <li>Connect us to the programming club and placement cells of your college.</li>
-                            <li>Conducting Hackathons on HackerEarth.</li>
-                            <li>Come up with innovative ideas on how HackerEarth can associate with your college.</li>
-                            <li>Plug in HackerEarth as an associate in any technical fest that your college conducts.</li>
+                            <li>Web App development with PHP and Bootstrap</li>
+                            <li>User trainings</li>
+                            <li>To design  logic  system</li>
+                            <li>Databases: Analysis, Creating, Support</li>
+                            <li>Scrum Methodology</li>
+                            <li>MySQL Administration and connections to applications</li>
                         </ul>
                         <p></p>
                     </div><!--//details-->
