--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
     <div class="wrapper">
         <div class="sidebar-wrapper" style="width: 249px;">
-            <div class="profile-container">
-                <img class="profile img-responsive img-circle" src="assets/images/eder.jpg" alt="" />
+            <div class="profile-container" style="width: 100%;">
+                <img class="profile img-circle" style="width: 100px; height: 100px;" src="assets/images/eder.jpg" alt="" />
                 <h1 class="name">Eder Ramos</h1>
                 <h3 class="tagline">Jr Developer</h3>
             </div><!--//profile-container-->
@@ -93,13 +93,19 @@
                     <div class="details">
                         <p>I've Participed:<br>
                         </p><ul>
-                            <li>ENEIT (National technological innovation event 2016).</li>
+                            <li>ENEIT (National Technological Innovation Event 2016).</li>
                                 <ul>
                                     <li>Local phase (1st place)</li>
                                     <li>Regional phase (4th place)</li>
                                     <li>National phase</li>
                                 </ul>
-                            <li>Academy journals Colima 2016.</li>
+                            <li>Academy journals.
+                                <ul>
+                                    <li>Colima      2016</li>
+                                    <li>Zacatecas   2017</li>
+                                </ul>
+                            </li>
+                            <li>8th International Supercomputing Conference In Mexico (ISUM, 2017).</li>
                         </ul>
                         <p></p>
                     </div>
@@ -136,7 +142,7 @@
                             <h3 class="job-title">.NET Developer</h3>
                             <div class="time">2015 - 2016</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a target="_blank" href="https://www.facebook.com/TuukulCarft//">TuukulCraft Inc.</a></div>
+                        <div class="company"><a target="_blank" href="">TuukulCraft Inc.</a></div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET WITH MVC 4, and Visual Studio 2015 as my main IDE.</p>  
@@ -185,7 +191,7 @@
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="#">ZTank</a></span> - 
-                    <span class="project-tagline">ZTank is a support tool to know which gas stations are close and the best rated by other users, for different reasons such as: your experience, complete liters, etc.</span>
+                    <span class="project-tagline">ZTank is a support tool to know which gas stations are close and the best rated by other users, for different reasons such as: your experience, complete liters, etc. This project actually is in process to building and testing.</span>
                 </div><!--//item-->
             </section><!--//section-->
             
