--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="item">
                     <h4 class="degree">MSc in Computer Systems</h4>
                     <h5 class="meta">Instituto Tecnológico de Colima</h5>
-                    <div class="time">2017 - </div>
+                    <div class="time">2017 - <em>Actually</em></div>
                 </div><!--//item-->
             </div><!--//education-container-->
             
