--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <h3 class="job-title">.NET Developer</h3>
                             <div class="time">2015 - 2016</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a target="_blank" href="https://www.facebook.com/TuukulCarft/">TuukulCraft Inc.</a></div>
+                        <div class="company"><a target="_blank" href="#">TuukulCraft Inc.</a></div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET WITH MVC 4, and Visual Studio 2015 as my main IDE.</p>  
