--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Experience in web applications and web services. Development with 2 years of experience and using the new technologies that trends. I've worked for the sector private and public in my state.</p>
+                    <p aling="justify">Experience in web applications and web services. Development with 2 years of experience and using the new technologies that trends. I've worked for the sector private and public in my state.</p>
                     <div class="details">
                         <p>I've Participed:<br>
                         </p><ul>
@@ -145,7 +145,7 @@
                         <div class="company"><a target="_blank" href="#">TuukulCraft Inc.</a></div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET WITH MVC 4, and Visual Studio 2015 as my main IDE.</p>  
+                        <p aling="justify">I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET with MVC 4, and Visual Studio 2015 as my main IDE.</p>  
                         <p>Main tasks:<br>
                         </p><ul>
                             <li>Web Apps development with ASP.NET and MVC 4</li>
@@ -167,7 +167,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p></p>
-                        <p>I've Developed Web apps for education purposes, with responsives frameworks for all platforms.</p>  
+                        <p aling="justify">I've Developed Web apps for education purposes, with responsives frameworks for all platforms.</p>  
                         <p>Main Projects:<br>
                         </p><ul>
                             <li>ZTank</li>
@@ -180,7 +180,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-                    <p>During the last two years ago, I've colaborated in some projects for my university. Also i've worked in personal projects how ZTank.</p>
+                    <p aling="justify">During the last two years ago, I've colaborated in some projects for my university. Also i've worked in personal projects how ZTank.</p>
                 </div><!--//intro-->
                 <div class="item">
                     <span class="project-title"><a href="http://www.infoxploratec.esy.es" target="_blank">XploraTEC</a></span> - <span class="project-tagline">XploraTEC is an innovative project developed by Instituto Tecnológico de Colima, which seeks to give society a powerful tool in the fight against breast cancer.</span>
