--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile-container" style="width: 100%;">
                 <img class="profile img-circle" style="width: 100px; height: 100px;" src="assets/images/eder.jpg" alt="" />
                 <h1 class="name">Eder Ramos</h1>
-                <h3 class="tagline">Jr Developer</h3>
+                <h3 class="tagline">Web Developer</h3>
             </div><!--//profile-container-->
             <style>
                 #email{
@@ -43,7 +43,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a id="email" href="mailto: eder.ramos.developer@gmail.com">eder.ramos.developer@gmail.com</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">+52 1 312 105 2443</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
+                    <!--<li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>-->
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/eder-dev" target="_blank">linkedin.com/in/eder-dev</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="github.com/hadesth2597" target="_blank">github.com/hadesth2597</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/EderCCMx" target="_blank">@EderCCMx</a></li>
@@ -55,12 +55,12 @@
                 <div class="item">
                     <h4 class="degree">Bachelor of Computing Engineering</h4>
                     <h5 class="meta">Instituto Tecnológico de Colima</h5>
-                    <div class="time">2012 - 2017</div>
+                    <div class="time">2012 - Actually</div>
                 </div><!--//item-->
-                <div class="item">
+               <!-- <div class="item">
                     <h4 class="degree">MSc in Computer Systems</h4>
                     <h5 class="meta">Instituto Tecnológico de Colima</h5>
-                    <div class="time">2017 - <em>Actually</em></div>
+                    <div class="time">2017 - Actually</div>
                 </div><!--//item-->
             </div><!--//education-container-->
             
@@ -89,7 +89,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p aling="justify">Experience in web applications and web services. Development with 2 years of experience and using the new technologies that trends. I've worked for the sector private and public in my state.</p>
+                    <p>Experience in web applications and web services. Development with 2 years of experience and using the new technologies that trends. I've worked for the sector private and public in my state.</p>
                     <div class="details">
                         <p>I've Participed:<br>
                         </p><ul>
@@ -105,7 +105,7 @@
                                     <li>Zacatecas   2017</li>
                                 </ul>
                             </li>
-                            <li>8th International Supercomputing Conference In Mexico (ISUM, 2017).</li>
+                            <!--<li>8th International Supercomputing Conference In Mexico (ISUM, 2017).</li>-->
                         </ul>
                         <p></p>
                     </div>
@@ -142,14 +142,15 @@
                             <h3 class="job-title">.NET Developer</h3>
                             <div class="time">2015 - 2016</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a target="_blank" href="#">TuukulCraft Inc.</a></div>
+                        <div class="company"><a target="_blank" href="https://www.facebook.com/TuukulCarft/">TuukulCraft Inc.</a></div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p aling="justify">I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET with MVC 4, and Visual Studio 2015 as my main IDE.</p>  
+                        <p>I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET WITH MVC 4, and Visual Studio 2015 as my main IDE.</p>  
                         <p>Main tasks:<br>
                         </p><ul>
                             <li>Web Apps development with ASP.NET and MVC 4</li>
-                            <li>SQL Server/Azure Administration and connections to applications</li>
+                            <!--<li>SQL Server/Azure Administration and connections to applications</li>-->
+                            <li>SQL Server Administration and connections to applications</li>
                             <li>Application Support</li>
                             <li>Databases: Analysis, Creating, Support</li>
                             <li>Scrum Methodology</li>
@@ -167,7 +168,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p></p>
-                        <p aling="justify">I've Developed Web apps for education purposes, with responsives frameworks for all platforms.</p>  
+                        <p>I've Developed Web apps for education purposes, with responsives frameworks for all platforms.</p>  
                         <p>Main Projects:<br>
                         </p><ul>
                             <li>ZTank</li>
@@ -180,7 +181,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-                    <p aling="justify">During the last two years ago, I've colaborated in some projects for my university. Also i've worked in personal projects how ZTank.</p>
+                    <p>During the last two years ago, I've colaborated in some projects for my university. Also i've worked in personal projects how ZTank.</p>
                 </div><!--//intro-->
                 <div class="item">
                     <span class="project-title"><a href="http://www.infoxploratec.esy.es" target="_blank">XploraTEC</a></span> - <span class="project-tagline">XploraTEC is an innovative project developed by Instituto Tecnológico de Colima, which seeks to give society a powerful tool in the fight against breast cancer.</span>
@@ -206,14 +207,14 @@
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS</h3>
+                        <h3 class="level-title">ASP.NET MVC</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">ASP.NET MVC</h3>
+                     <div class="item">
+                        <h3 class="level-title">HTML5 &amp; CSS</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>                                      
@@ -243,14 +244,14 @@
                     <div class="item">
                         <h3 class="level-title">Javascript &amp; jQuery</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="65%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">PHP &amp; Laravel</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="60%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->        
