--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="company"><a target="_blank" href="https://www.facebook.com/TuukulCarft/">TuukulCraft Inc.</a></div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET WITH MVC 4, and Visual Studio 2015 as my main IDE.</p>  
+                        <p align="justify">I worked as an IT Intern, my work was centered in giving support and the creation of new applications for enterprise, some of the technologies that I used were MS SQL Server, LINQ, Ajax, C# and ASP.NET WITH MVC 4, and Visual Studio 2015 as my main IDE.</p>  
                         <p>Main tasks:<br>
                         </p><ul>
                             <li>Web Apps development with ASP.NET and MVC 4</li>
@@ -289,7 +289,11 @@
             
         </div><!--//main-body-->
     </div>
- 
+ <style type="text/css">
+     p{
+        text-align:justify;
+     }
+ </style>
     <footer class="footer">
         <div class="text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
