--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">+52 1 312 105 2443</a></li>
                     <!--<li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>-->
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/eder-dev" target="_blank">linkedin.com/in/eder-dev</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="github.com/hadesth2597" target="_blank">github.com/hadesth2597</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/hadesth2597" target="_blank">github.com/hadesth2597</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/EderCCMx" target="_blank">@EderCCMx</a></li>
                     <li class="facebook"><i class="fa fa-facebook"></i><a href="https://www.facebook.com/eder2597" target="_blank"> Eder Ramos</a></li>
                 </ul>
